--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: Vinícius R. S. Nazato
 show_downloads: true
-theme: jekyll-theme-slate
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-themez
