--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Vinícius R. S. Nazato
-remote_theme: pages-themes/slate@v0.2.0
-logo: img/profile.jpeg
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-themez
+- jekyll-remote-theme 
+logo: img/profile.jpeg
+
