--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Vinícius R. S. Nazato
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme 
-logo: "img/profile.jpeg"
+logo: "img/profile.jpeg?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Welcome to my portfolio page!
