--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Vinícius Nazato
-logo: /imgs/profile.jpeg
+logo: "/imgs/profile.jpeg"
+theme: jekyll-theme-minimal
 
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Welcome to my portfolio page!
