--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vinícius Nazato
-logo: "/imgs/profile.jpeg"
+logo: "/imgs/profile.png"
 theme: jekyll-theme-minimal
 
 description: > # your text below (remove <br> elements if you don't need line breaks)
